Updated tags and categories

--- a/_posts/2023/2023-03-08-Testing post 102.md
+++ b/_posts/2023/2023-03-08-Testing post 102.md
@@ -2,8 +2,8 @@
 
 title: Testing post 102
 author: chatGpt
-categories: [test1, test2]
-tags: [cat1, cat2]
+categories: [test]
+tags: [test]
 date: 2023-03-08 03:18:25 +00:00
 ---
 
